TestSuite/Syntax/Correct/Timezone.tjp
project tz "Timezone" "1.0" 2005-06-06-0:00-UTC 2005-06-07-0:00-UTC {
  timezone "Europe/Athens"
}

task item "Project" {
  start 2005-06-06-12:00
}

