TestSuite/Syntax/Errors/Booking2.tjp
project prj "Project" "1.0" 2006-02-17-0:00-GMT +2m {
	timezone "GMT"
}

resource r1 "Resource 1"

task t1 "Task 1" {
  start 2006-02-17
  milestone
}

supplement resource r1 {
  booking t1 2006-02-17-10:00 +8h { sloppy 2 }
}
